<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/menu_hive_task_start"
        android:title="@string/hive_task_action_start" />
    <item
        android:id="@+id/menu_hive_task_retry"
        android:title="@string/hive_task_action_retry" />
    <item
        android:id="@+id/menu_hive_task_mark_complete"
        android:title="@string/hive_task_action_mark_complete" />
    <item
        android:id="@+id/menu_hive_task_archive"
        android:title="@string/hive_task_action_archive" />
    <item
        android:id="@+id/menu_hive_task_unarchive"
        android:title="@string/hive_task_action_unarchive" />
    <item
        android:id="@+id/menu_hive_task_duplicate"
        android:title="@string/hive_task_action_duplicate" />
    <item
        android:id="@+id/menu_hive_task_auto_merge"
        android:checkable="true"
        android:title="@string/hive_task_action_auto_merge" />
    <item
        android:id="@+id/menu_hive_task_run_build"
        android:checkable="true"
        android:title="@string/hive_task_action_run_build" />
    <item
        android:id="@+id/menu_hive_task_run_test_suite"
        android:checkable="true"
        android:title="@string/hive_task_action_run_test_suite" />
</menu>
